# generateHtml

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
generateHtml/: attributes.py  context.py  exceptions.py  tags.py  utils.py
tests/: tests.py
